FIX - lang and timer fix

--- a/src/localization/tr.json
+++ b/src/localization/tr.json
@@ -8,11 +8,11 @@
     "queenOfHearts": "Kupa Kızı",
     "queenOfSpades": "Maça Kızı",
     "queenOfClubs": "Sınek Kızı",
-    "queenOfDiamonds": "Kupa Kızı",
+    "queenOfDiamonds": "Karo Kızı",
     "kingOfHearts": "Kupa Papazı",
     "kingOfSpades": "Maça Papazı",
     "kingOfClubs": "Sınek Papazı",
-    "kingOfDiamonds": "Kupa Papazı"
+    "kingOfDiamonds": "Karo Papazı"
   },
   "dialog": {
     "bankWin": "Banka Kazandı",
